fixed reservation section mobile

--- a/scss/components/_bestIngridients.scss
+++ b/scss/components/_bestIngridients.scss
@@ -10,7 +10,7 @@
   }
   img{
     width: 40%;
-    margin-top: -2em;
+    margin-top: 0em;
   }
 }
 
